--- a/HTML.html
+++ b/HTML.html
@@ -9,7 +9,7 @@
         <script>
             const button = document.querySelector('button');
             const h1 = document.querySelector('h1');
-
+            // 클릭 작동 커멘드
             button.addEventListener('click', function () {
                 const newColor = makeRandColor();
                 document.body.style.backgroundColor = newColor;
